<resources>
    <string name="app_name">Clickr</string>
    <string name="goodDogButton">Good Dog!</string>
    <string name="whistle">Whistle</string>
    <string name="sitTracker">Sit Tracker</string>
    <string name="title_activity_training_log">TrainingLog</string>
    <string name="total_Clicks">Total Clicks</string>
    <string name="sitText">Sit</string>
    <string name="layDownTest">Lay-Down</string>
    <string name="handShake">Hand Shake</string>
    <string name="back">Back</string>
    <string name="shake">sha...</string>
    <string name="lay">lay...</string>
    <string name="sit">sit...</string>
    <string name="layText">Lay Tracker</string>
    <string name="shakeText">Shake Tracker</string>

</resources>

